// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for AccessDenied 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    An issue occurred with the OAuth provider. Your account may not have been set up properly. Please contact support or try a different sign-in method.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for CredentialsSignin 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Your account could not be found or the credentials provided were incorrect. Please check your email and password, or sign up for a new account.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for OAuthAccountExists 1`] = `
<div
  aria-live="polite"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-accent-soft text-accent-fg mt-4"
  data-testid="login-banner"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-info mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 16v-4"
    />
    <path
      d="M12 8h.01"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    An account with this email already exists. Sign in with your password or use "Continue with GitHub/GitLab" without create-account mode.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for OAuthEmailRequired 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Your Git provider did not share an email address. Set your email to public or add a verified email on GitHub/GitLab, then try again.
  </div>
  <div
    class="flex shrink-0 items-center gap-1.5"
  >
    <a
      class="inline-flex shrink-0 select-none items-center justify-center whitespace-nowrap font-medium tracking-[0.01em] no-underline transition-[background-color,box-shadow,color,transform] duration-[var(--dur-fast)] ease-out focus-visible:outline-none active:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg]:size-[var(--icon-button)] [&_svg]:shrink-0 bg-surface text-fg shadow-control hover:bg-subtle h-[var(--control-h-sm)] gap-1.5 px-2.5 text-xs rounded-full"
      href="/login?callbackUrl=%2Fade"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Try again
    </a>
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for OAuthProfileIncomplete 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    We could not read your OAuth profile. Please try again or contact support.
  </div>
  <div
    class="flex shrink-0 items-center gap-1.5"
  >
    <a
      class="inline-flex shrink-0 select-none items-center justify-center whitespace-nowrap font-medium tracking-[0.01em] no-underline transition-[background-color,box-shadow,color,transform] duration-[var(--dur-fast)] ease-out focus-visible:outline-none active:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg]:size-[var(--icon-button)] [&_svg]:shrink-0 bg-surface text-fg shadow-control hover:bg-subtle h-[var(--control-h-sm)] gap-1.5 px-2.5 text-xs rounded-full"
      href="/login?callbackUrl=%2Fade"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Try again
    </a>
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for SignupSessionExpired 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Your signup session expired. Please start again from Create account.
  </div>
  <div
    class="flex shrink-0 items-center gap-1.5"
  >
    <a
      class="inline-flex shrink-0 select-none items-center justify-center whitespace-nowrap font-medium tracking-[0.01em] no-underline transition-[background-color,box-shadow,color,transform] duration-[var(--dur-fast)] ease-out focus-visible:outline-none active:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg]:size-[var(--icon-button)] [&_svg]:shrink-0 bg-surface text-fg shadow-control hover:bg-subtle h-[var(--control-h-sm)] gap-1.5 px-2.5 text-xs rounded-full"
      href="/login?callbackUrl=%2Fade"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Try again
    </a>
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for TwoFactorInvalid 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    That authentication code was not accepted. Check your authenticator app and try again.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for account-disabled 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Your account is currently disabled. Please contact support if you believe this is a mistake.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for account-not-verified 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    You have not yet verified your account e-mail address. Check your inbox for the verification email, then sign in again.
  </div>
  <div
    class="flex shrink-0 items-center gap-1.5"
  >
    <a
      class="inline-flex shrink-0 select-none items-center justify-center whitespace-nowrap font-medium tracking-[0.01em] no-underline transition-[background-color,box-shadow,color,transform] duration-[var(--dur-fast)] ease-out focus-visible:outline-none active:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg]:size-[var(--icon-button)] [&_svg]:shrink-0 bg-surface text-fg shadow-control hover:bg-subtle h-[var(--control-h-sm)] gap-1.5 px-2.5 text-xs rounded-full"
      href="/login?callbackUrl=%2Fade"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Try again
    </a>
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for identity-linked-elsewhere 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    This provider account is already linked to another user. Sign in with that account, or use a different provider account.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for last-sign-in-method 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    That account is your only way to sign in. Set a password or link another provider before unlinking it, so you keep access to your account.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for membership-suspended 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Your membership in this workspace has been suspended. Contact your workspace administrator to restore access.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for provider-already-linked 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Your account already has a different identity linked for this provider. Sign in with the originally linked provider account, or manage linked accounts from your dashboard.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for provider-not-configured 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Sign-in with that provider is not available on this server. Choose one of the sign-in options shown, or contact your administrator.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for sign-in-failed 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Something went wrong while signing you in. Please try again, or contact support if the issue persists.
  </div>
  <div
    class="flex shrink-0 items-center gap-1.5"
  >
    <a
      class="inline-flex shrink-0 select-none items-center justify-center whitespace-nowrap font-medium tracking-[0.01em] no-underline transition-[background-color,box-shadow,color,transform] duration-[var(--dur-fast)] ease-out focus-visible:outline-none active:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg]:size-[var(--icon-button)] [&_svg]:shrink-0 bg-surface text-fg shadow-control hover:bg-subtle h-[var(--control-h-sm)] gap-1.5 px-2.5 text-xs rounded-full"
      href="/login?callbackUrl=%2Fade"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Try again
    </a>
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for signup-disabled 1`] = `
<div
  aria-live="polite"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-accent-soft text-accent-fg mt-4"
  data-testid="login-banner"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-info mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 16v-4"
    />
    <path
      d="M12 8h.01"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    New account sign-ups are currently disabled on this server. Contact your administrator to request an account or an invitation.
  </div>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for unverified-email 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Your sign-in provider could not confirm that your email address is verified. Verify your email with the provider (e.g. GitHub or GitLab), then try again.
  </div>
  <div
    class="flex shrink-0 items-center gap-1.5"
  >
    <a
      class="inline-flex shrink-0 select-none items-center justify-center whitespace-nowrap font-medium tracking-[0.01em] no-underline transition-[background-color,box-shadow,color,transform] duration-[var(--dur-fast)] ease-out focus-visible:outline-none active:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg]:size-[var(--icon-button)] [&_svg]:shrink-0 bg-surface text-fg shadow-control hover:bg-subtle h-[var(--control-h-sm)] gap-1.5 px-2.5 text-xs rounded-full"
      href="/login?callbackUrl=%2Fade"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Try again
    </a>
  </div>
</div>
`;

exports[`unknown error codes (OLO-3.2) falls back to the safe generic banner for "   " without echoing the code: generic banner 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Something went wrong while signing you in. Please try again, or contact support if the issue persists.
  </div>
  <div
    class="flex shrink-0 items-center gap-1.5"
  >
    <a
      class="inline-flex shrink-0 select-none items-center justify-center whitespace-nowrap font-medium tracking-[0.01em] no-underline transition-[background-color,box-shadow,color,transform] duration-[var(--dur-fast)] ease-out focus-visible:outline-none active:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg]:size-[var(--icon-button)] [&_svg]:shrink-0 bg-surface text-fg shadow-control hover:bg-subtle h-[var(--control-h-sm)] gap-1.5 px-2.5 text-xs rounded-full"
      href="/login?callbackUrl=%2Fade"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Try again
    </a>
  </div>
</div>
`;

exports[`unknown error codes (OLO-3.2) falls back to the safe generic banner for "<script>alert(1)</script>" without echoing the code: generic banner 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Something went wrong while signing you in. Please try again, or contact support if the issue persists.
  </div>
  <div
    class="flex shrink-0 items-center gap-1.5"
  >
    <a
      class="inline-flex shrink-0 select-none items-center justify-center whitespace-nowrap font-medium tracking-[0.01em] no-underline transition-[background-color,box-shadow,color,transform] duration-[var(--dur-fast)] ease-out focus-visible:outline-none active:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg]:size-[var(--icon-button)] [&_svg]:shrink-0 bg-surface text-fg shadow-control hover:bg-subtle h-[var(--control-h-sm)] gap-1.5 px-2.5 text-xs rounded-full"
      href="/login?callbackUrl=%2Fade"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Try again
    </a>
  </div>
</div>
`;

exports[`unknown error codes (OLO-3.2) falls back to the safe generic banner for "some-code-from-the-future" without echoing the code: generic banner 1`] = `
<div
  aria-live="assertive"
  class="relative flex w-full items-start gap-2.5 rounded-md px-3.5 py-2.5 text-sm bg-danger-soft text-danger-fg mt-4"
  data-testid="login-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert mt-px size-4 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    Something went wrong while signing you in. Please try again, or contact support if the issue persists.
  </div>
  <div
    class="flex shrink-0 items-center gap-1.5"
  >
    <a
      class="inline-flex shrink-0 select-none items-center justify-center whitespace-nowrap font-medium tracking-[0.01em] no-underline transition-[background-color,box-shadow,color,transform] duration-[var(--dur-fast)] ease-out focus-visible:outline-none active:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg]:size-[var(--icon-button)] [&_svg]:shrink-0 bg-surface text-fg shadow-control hover:bg-subtle h-[var(--control-h-sm)] gap-1.5 px-2.5 text-xs rounded-full"
      href="/login?callbackUrl=%2Fade"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Try again
    </a>
  </div>
</div>
`;
